--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,17 +1,19 @@
-fastapi==0.104.1
-uvicorn==0.24.0
-python-multipart==0.0.6
-requests==2.31.0
-python-dotenv==1.0.0
-cohere==4.37.0
-pinecone-client==3.0.0
-yt-dlp==2023.11.16
-youtube-transcript-api==0.6.1
-PyPDF2==3.0.1
-PyMuPDF==1.23.8
+fastapi>=0.100.0,<0.105.0
+uvicorn[standard]>=0.20.0,<0.25.0
+python-multipart>=0.0.6
+requests>=2.31.0
+python-dotenv>=1.0.0
+cohere>=4.30.0
+pinecone-client>=2.2.0,<3.0.0
+yt-dlp>=2023.11.0
+youtube-transcript-api>=0.6.0
+PyPDF2>=3.0.0
+PyMuPDF>=1.23.0
 # Authentication dependencies
-PyJWT==2.8.0
-passlib[bcrypt]==1.7.4
-email-validator==2.0.0
+PyJWT>=2.8.0
+passlib[bcrypt]>=1.7.4
+email-validator>=2.0.0
 # Database dependencies
-asyncpg==0.29.0 
+asyncpg>=0.29.0
+# LLM dependencies
+groq>=0.4.0 
