--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -4,7 +4,7 @@ python-multipart>=0.0.6
 requests>=2.31.0
 python-dotenv>=1.0.0
 cohere>=4.30.0
-pinecone>=2.2.0
+pinecone-client>=2.2.0
 yt-dlp>=2023.11.0
 youtube-transcript-api>=0.6.0
 PyPDF2>=3.0.0
